--- a/learn-react-ts/package.json
+++ b/learn-react-ts/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
