--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "scripts": {
     "dev": "bun dev index.ts",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint ."
   },
   "private": true,
   "workspaces": [
     "projects/**"
   ],
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@types/bun": "latest",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "husky": "^9.1.7",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript-eslint": "^8.46.4"
   },
   "peerDependencies": {
     "typescript": "^5"
