--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,4 @@
 {
-   "*.{ts,tsx,js,jsx,css,md}": "prettier --write"
+   "*.{ts,tsx,js,jsx}": ["eslint --fix", "prettier --write"],
+   "*.{css,md}": "prettier --write"
 }
