--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bun": "latest",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-tailwindcss": "^3.18.2",
