--- a/projects/learn-react-ts/game-grid/package.json
+++ b/projects/learn-react-ts/game-grid/package.json
@@ -5,7 +5,7 @@
    "type": "module",
    "scripts": {
       "dev": "vite",
-      "build": "tsc -b && vite build",
+      "build": "vite build --no-sourcemap",
       "lint": "eslint .",
       "preview": "vite preview"
    },
@@ -30,6 +30,6 @@
       "typescript": "~5.9.3",
       "typescript-eslint": "^8.46.3",
       "vite": "^7.2.2",
-      "vite-tsconfig-paths": "^5.1.4"
+      "esbuild": "^0.24.2"
    }
 }
